some refactoring took place.